--- a/campfire/package.json
+++ b/campfire/package.json
@@ -21,7 +21,8 @@
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -32,8 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-native": "^3.6.0",
-    "jest-expo": "^32.0.0",
-    "redux-devtools-extension": "^2.13.8"
+    "jest-expo": "^32.0.0"
   },
   "private": true
 }
