--- a/campfire/package.json
+++ b/campfire/package.json
@@ -14,26 +14,27 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
-    "firebase": "^5.9.0",
+    "firebase": "^5.11.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.1.0",
-    "react-navigation": "^3.0.9",
+    "react-native-elements": "^1.2.7",
+    "react-navigation": "^3.13.0",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-expo": "^5.0.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-native": "^3.6.0",
-    "jest-expo": "^32.0.0"
+    "babel-eslint": "^10.1.0",
+    "babel-preset-expo": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-native": "^3.10.0",
+    "jest-expo": "^32.0.1"
   },
-  "private": true
+  "private": true,
+  "name": "campfire"
 }
