--- a/campfire/package.json
+++ b/campfire/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "expo": "^36.0.0",
-    "firebase": "^5.11.1",
+    "expo": "^37.0.0",
+    "firebase": "7.9.0",
     "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-navigation": "^3.13.0",
     "react-redux": "^6.0.1",
@@ -26,14 +26,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-preset-expo": "^8.0.0",
+    "babel-preset-expo": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-native": "^3.10.0",
-    "jest-expo": "^36.0.0"
+    "jest-expo": "^37.0.0"
   },
   "private": true,
   "name": "campfire"
