--- a/campfire/package.json
+++ b/campfire/package.json
@@ -18,9 +18,9 @@
     "react": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.8.0",
-    "react-native-reanimated": "^1.13.1",
-    "react-native-screens": "^2.13.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^1.4.0",
     "react-navigation-stack": "^1.7.3",
